program translations: update Catalan

--- a/po/ca.po
+++ b/po/ca.po
@@ -3141,7 +3141,7 @@ msgstr "Una llista separada per comes dels intervals del codi de temps del conti
 #: src/input/r_matroska.cpp:780
 #, no-c-format
 msgid "A default index and with it default settings for the width, height and color palette will be used instead."
-msgstr "Un índex per omissió i amb els ajustaments per omissió que s'usaran per a l'amplada, alçada i color."
+msgstr "Un índex predeterminat i amb els ajustaments predeterminats que s'usaran per a l'amplada, alçada i paleta de colors."
 
 #: src/merge/output_control.cpp:241
 #: src/mkvtoolnix-gui/header_editor/tab.cpp:275
@@ -5002,9 +5002,9 @@ msgid "Color matrix coefficients:"
 msgstr "Coeficients de la matriu del color:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2178
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color palette:"
-msgstr "Espai de color"
+msgstr "Paleta de colors:"
 
 #: src/common/kax_element_names.cpp:136
 #, no-c-format
@@ -5596,7 +5596,7 @@ msgstr "DVD"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2176
 #, no-c-format
 msgid "Dark"
-msgstr ""
+msgstr "Fosca"
 
 #: src/mkvtoolnix-gui/info/model.cpp:90
 #, no-c-format
@@ -8499,9 +8499,9 @@ msgstr[0] "Durada: %1 byte"
 msgstr[1] "Durada: %1 bytes"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Light"
-msgstr "A la dreta"
+msgstr "Clara"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -14747,9 +14747,9 @@ msgid "Use legacy font MIME types when adding new attachments or replacing exist
 msgstr "Usa els tipus MIME de lletra llegats quan s'afegeixin adjunts nous o substitueix els existents."
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use system settings"
-msgstr "Tan&ca els ajustaments"
+msgstr "Usa la configuració del sistema"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2270
 #, no-c-format
