--- a/po/es.po
+++ b/po/es.po
@@ -5033,9 +5033,9 @@ msgid "Color matrix coefficients:"
 msgstr "Coeficientes de la matriz de color:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2178
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color palette:"
-msgstr "Espacio de color"
+msgstr "Paleta de color:"
 
 #: src/common/kax_element_names.cpp:136
 #, no-c-format
@@ -5626,7 +5626,7 @@ msgstr "DVDs"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2176
 #, no-c-format
 msgid "Dark"
-msgstr ""
+msgstr "Oscuro"
 
 #: src/mkvtoolnix-gui/info/model.cpp:90
 #, no-c-format
@@ -8532,9 +8532,9 @@ msgstr[1] "Longitud: %1 bytes"
 msgstr[2] "Longitud: %1 bytes"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Light"
-msgstr "Derecha"
+msgstr "Claro"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -14793,9 +14793,9 @@ msgid "Use legacy font MIME types when adding new attachments or replacing exist
 msgstr "Use tipos MIME de fuentes heredadas al agregar nuevos archivos adjuntos o reemplazar los existentes"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use system settings"
-msgstr "&Cerrar ajustes"
+msgstr "Usar ajustes del sistema"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2270
 #, no-c-format
