--- a/po/fr.po
+++ b/po/fr.po
@@ -434,7 +434,7 @@ msgstr ""
 #: src/merge/mkvmerge.cpp:140
 #, no-c-format
 msgid "  --disable-lacing         Do not use lacing.\n"
-msgstr "  --disable-lacing         Ne pas utiliser le laçage.\n"
+msgstr "  --disable-lacing         Désactive le laçage.\n"
 
 #: src/merge/mkvmerge.cpp:143
 #, no-c-format
@@ -4957,9 +4957,9 @@ msgid "Color matrix coefficients:"
 msgstr "Coefficients de la matrice de couleurs :"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2178
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color palette:"
-msgstr "Espace de couleurs"
+msgstr "Palette de couleurs"
 
 #: src/common/kax_element_names.cpp:136
 #, no-c-format
@@ -5550,7 +5550,7 @@ msgstr "DVD"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2176
 #, no-c-format
 msgid "Dark"
-msgstr ""
+msgstr "Sombre"
 
 #: src/mkvtoolnix-gui/info/model.cpp:90
 #, no-c-format
@@ -8454,9 +8454,9 @@ msgstr[1] "Longueur : %1 octets"
 msgstr[2] "Longueur : %1 octets"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Light"
-msgstr "Droite"
+msgstr "Claire"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -14720,9 +14720,9 @@ msgid "Use legacy font MIME types when adding new attachments or replacing exist
 msgstr "Utiliser les anciens types MIME de polices de caractères à l'ajout de nouvelles pièces jointes ou au remplacement de celles existantes"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use system settings"
-msgstr "&Fermer les paramètres"
+msgstr "Utiliser les paramètres du système"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2270
 #, no-c-format
