--- a/po/it.po
+++ b/po/it.po
@@ -4964,9 +4964,9 @@ msgid "Color matrix coefficients:"
 msgstr "Coefficienti di matrice colore:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2178
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color palette:"
-msgstr "Spazio colore"
+msgstr "Palette dei colori:"
 
 #: src/common/kax_element_names.cpp:136
 #, no-c-format
@@ -5559,7 +5559,7 @@ msgstr "DVD"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2176
 #, no-c-format
 msgid "Dark"
-msgstr ""
+msgstr "Scura"
 
 #: src/mkvtoolnix-gui/info/model.cpp:90
 #, no-c-format
@@ -8466,9 +8466,9 @@ msgstr[1] "Lunghezza: %1 byte"
 msgstr[2] "Lunghezza: %1 byte"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Light"
-msgstr "Destra"
+msgstr "Chiara"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -14743,9 +14743,9 @@ msgid "Use legacy font MIME types when adding new attachments or replacing exist
 msgstr "Usa tipi MIME font legacy quando si aggiungono nuovi allegati o si sostituiscono quelli esistenti"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use system settings"
-msgstr "Impostazioni &chiusura"
+msgstr "Usa le impostazioni di sistema"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2270
 #, no-c-format
