program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-05-04 18:06+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: solokot <solokot@gmail.com>, 2019-2023\n"
+"Last-Translator: Andrei Stepanov, 2018-2023\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -4711,9 +4711,9 @@ msgid "Color matrix coefficients:"
 msgstr "Коэффициенты цветовой матрицы:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2178
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color palette:"
-msgstr "Цветовое пространство"
+msgstr "Палитра цветов:"
 
 #: src/common/kax_element_names.cpp:136
 #, no-c-format
@@ -5304,7 +5304,7 @@ msgstr "DVD"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2176
 #, no-c-format
 msgid "Dark"
-msgstr ""
+msgstr "Тёмная"
 
 #: src/mkvtoolnix-gui/info/model.cpp:90
 #, no-c-format
@@ -8210,9 +8210,9 @@ msgstr[2] "Длина: %1 байтов"
 msgstr[3] "Длина: %1 байтов"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Light"
-msgstr "Справа"
+msgstr "Светлая"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -14485,9 +14485,9 @@ msgid "Use legacy font MIME types when adding new attachments or replacing exist
 msgstr "Использовать устаревшие MIME-типы шрифтов при добавлении новых вложений или замене существующих"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use system settings"
-msgstr "&Закрыть настройки"
+msgstr "Использовать настройки системы"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2270
 #, no-c-format
