program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -4924,9 +4924,9 @@ msgid "Color matrix coefficients:"
 msgstr "Renk matrisi katsayıları:"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2178
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Color palette:"
-msgstr "Renk alanı"
+msgstr "Renk paleti:"
 
 #: src/common/kax_element_names.cpp:136
 #, no-c-format
@@ -5517,7 +5517,7 @@ msgstr "DVD'ler"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2176
 #, no-c-format
 msgid "Dark"
-msgstr ""
+msgstr "Koyu"
 
 #: src/mkvtoolnix-gui/info/model.cpp:90
 #, no-c-format
@@ -7669,9 +7669,9 @@ msgid "If this option is enabled, the file title will be used as the basis for t
 msgstr "Eğer bu seçenek etkinleştirilirse, dosya başlığının ayarlanması durumunda dosya başlığı hedef dosya adı için temel olarak kullanılır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:544
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "If this option is enabled, the name of the directory the file is located in will be used as the basis for the destination file name."
-msgstr "Eğer bu seçenek etkinleştirilirse, dosya başlığının ayarlanması durumunda dosya başlığı hedef dosya adı için temel olarak kullanılır."
+msgstr "Eğer bu seçenek etkinleştirilirse, hedef dosya adı için temel olarak dosyanın bulunduğu dizinin adı kullanılacaktır."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:397
 #, no-c-format
@@ -8419,9 +8419,9 @@ msgstr[0] "Uzunluk: %1 bayt"
 msgstr[1] "Uzunluk: %1 bayt"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2175
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Light"
-msgstr "Sağ"
+msgstr "Açık"
 
 #: src/merge/timestamp_factory.cpp:359
 #, no-c-format
@@ -14663,9 +14663,9 @@ msgid "Use legacy font MIME types when adding new attachments or replacing exist
 msgstr "Yeni ekler eklerken veya varolanları değiştirirken eski yazı tipi MIME türlerini kullan"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2174
-#, fuzzy, no-c-format
+#, no-c-format
 msgid "Use system settings"
-msgstr "Ayarları &kapat"
+msgstr "Sistem ayarlarını kullan"
 
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2270
 #, no-c-format
