man page program translations: update Russian

--- a/doc/man/po4a/po/ru.po
+++ b/doc/man/po4a/po/ru.po
@@ -38,10 +38,8 @@ msgstr "76.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2023-03-26"
 msgid "2023-04-30"
-msgstr "2023-03-26"
+msgstr "2023-04-30"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1909,7 +1907,7 @@ msgstr "Этот параметр меняет порядок, в котором
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:429
 msgid "If this option isn't given, tracks will be sorted by their type first &amp; the order of their source file second. Video tracks come first followed by audio &amp; subtitle tracks. Other rarely used track types come last."
-msgstr ""
+msgstr "Если этот параметр не указан, дорожки будут отсортированы по их типу в первую очередь и по порядку их исходного файла во вторую очередь. Первыми идут видеодорожки, затем аудиодорожки и дорожки субтитров. Другие редко используемые типы дорожек идут последними."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:436
