program translations: update Russian

--- a/po/ru.po
+++ b/po/ru.po
@@ -754,7 +754,7 @@ msgid "  --track-name <TID:name>  Sets the name for a track.\n"
 msgstr "  --track-name <TID:name> - Устанавливает имя дорожки.\n"
 
 #: src/merge/mkvmerge.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...>\n"
 "                           A comma separated list of both file IDs\n"
@@ -762,7 +762,7 @@ msgid ""
 "                           tracks in the destination file. If not given,\n"
 "                           the tracks will sorted by type (video, audio,\n"
 "                           subtitles, others).\n"
-msgstr "  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...> - Разделённый запятыми список идентификаторов файлов и дорожек, контролирующий порядок дорожек в файле назначения.\n"
+msgstr "  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...> - Разделённый запятыми список ID файлов и дорожек, определяющий порядок дорожек в файле назначения. При его отсутствии дорожки будут отсортированы по типу (видео, аудио, субтитры и прочее).\n"
 
 #: src/merge/mkvmerge.cpp:234
 #, no-c-format
@@ -14962,7 +14962,7 @@ msgstr "Предупреждать перед &закрытием изменён
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2193
 #, no-c-format
 msgid "Warn before &overwriting existing items (files, jobs etc.)"
-msgstr "Предупреждать перед пе&резаписью уже созданных элементов (файлов, заданий и т.д.)"
+msgstr "Предупреждать перед пе&резаписью существующих объектов (файлов, заданий и т. п.)"
 
 #: src/input/subtitles.cpp:271
 #, no-c-format
