program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -1022,7 +1022,7 @@ msgstr ""
 "                           una pista.\n"
 
 #: src/merge/mkvmerge.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...>\n"
 "                           A comma separated list of both file IDs\n"
@@ -1031,10 +1031,11 @@ msgid ""
 "                           the tracks will sorted by type (video, audio,\n"
 "                           subtitles, others).\n"
 msgstr ""
-"  --track-order <IDArchivo1:TID1,IDArchivo2:TID2,IDArchivo3:TID3,...>\n"
-"                           Una lista separada por comas de IDs de\n"
-"                           archivo y pista que controla el orden de las\n"
-"                           pistas en el archivo de salida.\n"
+"  --track-order <ArchivoID1:TID1,ArchivoID2:TID2,ArchivoID3:TID3,...>\n"
+"                           Una lista separada por comas de los IDs de archivo y\n"
+"                           pista que controla el orden de las pistas en el archivo \n"
+"                           de destino. Si no se especifica, las pistas serán\n"
+"                           ordenadas por el tipo (video, audio, subtítulos, otros)\n"
 
 #: src/merge/mkvmerge.cpp:234
 #, no-c-format
