program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -971,7 +971,7 @@ msgid "  --track-name <TID:name>  Sets the name for a track.\n"
 msgstr "  --track-name <TID:nome>  Imposta il nome per una traccia.\n"
 
 #: src/merge/mkvmerge.cpp:126
-#, fuzzy, no-c-format
+#, no-c-format
 msgid ""
 "  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...>\n"
 "                           A comma separated list of both file IDs\n"
@@ -981,9 +981,11 @@ msgid ""
 "                           subtitles, others).\n"
 msgstr ""
 "  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...>\n"
-"                           Un elenco separato da virgole di ID e ID traccia\n"
-"                           che controlla l'ordine delle tracce nel file\n"
-"                           destinazione.\n"
+"                          Un elenco separato da virgole di entrambi gli ID file\n"
+"                           e ID tracce che controllano l'ordine delle tracce\n"
+"                           nel file destinazione. Se non indicato, le tracce\n"
+"                           verranno ordinate per tipo (video, audio,\n"
+"                           sottotitoli, altro).\n"
 
 #: src/merge/mkvmerge.cpp:234
 #, no-c-format
