program translations: update Turkish

--- a/po/tr.po
+++ b/po/tr.po
@@ -3861,7 +3861,7 @@ msgstr "MPEG4 bit akışlarını çözümler, her kareyi bir Matroska bloğu iç
 #: src/mkvtoolnix-gui/merge/output.cpp:251
 #, no-c-format
 msgid "Any later packets of other tracks will be discarded."
-msgstr ""
+msgstr "Diğer izlerin sonraki tüm paketleri yoksayılacaktır."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:252
 #: src/mkvtoolnix-gui/merge/output.cpp:253
