program translations: update Spanish

--- a/po/es.po
+++ b/po/es.po
@@ -1031,11 +1031,12 @@ msgid ""
 "                           the tracks will sorted by type (video, audio,\n"
 "                           subtitles, others).\n"
 msgstr ""
-"  --track-order <ArchivoID1:TID1,ArchivoID2:TID2,ArchivoID3:TID3,...>\n"
-"                           Una lista separada por comas de los IDs de archivo y\n"
-"                           pista que controla el orden de las pistas en el archivo \n"
-"                           de destino. Si no se especifica, las pistas serán\n"
-"                           ordenadas por el tipo (video, audio, subtítulos, otros)\n"
+"  --track-order <FileID1:TID1,FileID2:TID2,FileID3:TID3,...>\n"
+"                           Una lista separada por comas de los IDs de\n"
+"                           archivo y pista que controla el orden de\n"
+"                           las pistas en el archivo de destino. \n"
+"                           Si no se especifica, las pistas serán\n"
+"                           ordenadas por el tipo (video, audio, subtítulos, otros).\n"
 
 #: src/merge/mkvmerge.cpp:234
 #, no-c-format
@@ -2018,7 +2019,7 @@ msgstr "&Habilitado"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2231
 #, no-c-format
 msgid "&Ensure at least one track of each type has its \"track enabled\" flag set"
-msgstr ""
+msgstr "As&egúrese de que al menos una pista de cada tipo tiene activado el indicador \"pista activada\""
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:119
 #, no-c-format
@@ -7056,7 +7057,7 @@ msgstr "Para cada directorio se puede crear una nueva pestaña de ajustes de mul
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:329
 #, no-c-format
 msgid "For each track type the GUI determines if at least one track has the flag turned on."
-msgstr ""
+msgstr "Para cada tipo de pista, la GUI determina si al menos una pista tiene el indicador activado."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:410
 #, no-c-format
@@ -7570,7 +7571,7 @@ msgstr "Si está habilitado, esos archivos serán omitidos sin preguntar."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:328
 #, no-c-format
 msgid "If enabled, the GUI checks the state of the 'track enabled' flag of all video, audio & subtitle tracks when starting to multiplex or adding a job to the job queue."
-msgstr ""
+msgstr "Si está activada, al iniciar el multiplexado o al añadir un trabajo a la cola de trabajos, la GUI comprueba el estado del indicador 'pista activada', de todas las pistas de vídeo, audio y subtítulos."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:417
 #, no-c-format
@@ -7684,7 +7685,7 @@ msgstr "Si no hay ninguna pista de vídeo de salida, no se producirá ninguna di
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:330
 #, no-c-format
 msgid "If not, it will turn on the flag for the first track of the current type."
-msgstr ""
+msgstr "Si no, activará el indicador para la primera pista del tipo actual."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:225
 #, no-c-format
