program translations: update Italian

--- a/po/it.po
+++ b/po/it.po
@@ -1944,7 +1944,7 @@ msgstr "&Abilitato"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2231
 #, no-c-format
 msgid "&Ensure at least one track of each type has its \"track enabled\" flag set"
-msgstr ""
+msgstr "&Assicurati che almeno una traccia di ciascun tipo abbia il flag \"traccia abilitata\" impostato"
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:119
 #, no-c-format
@@ -6993,7 +6993,7 @@ msgstr ""
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:329
 #, no-c-format
 msgid "For each track type the GUI determines if at least one track has the flag turned on."
-msgstr ""
+msgstr "Per ogni tipo di traccia la GUI determina se almeno una traccia ha il flag attivato."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:410
 #, no-c-format
@@ -7507,7 +7507,7 @@ msgstr "Se abilitata, tali file verranno sempre ignorati senza chiedere."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:328
 #, no-c-format
 msgid "If enabled, the GUI checks the state of the 'track enabled' flag of all video, audio & subtitle tracks when starting to multiplex or adding a job to the job queue."
-msgstr ""
+msgstr "Se abilitata, quando si avvia il multiplexing o si aggiunge un lavoro alla coda dei lavori. la GUI controlla lo stato del flag 'traccia abilitata' di tutte le tracce video, audio e sottotitoli."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:417
 #, no-c-format
@@ -7621,7 +7621,7 @@ msgstr "Se non c'è traccia video destinazione non ci sarà suddivisione."
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:330
 #, no-c-format
 msgid "If not, it will turn on the flag for the first track of the current type."
-msgstr ""
+msgstr "In caso contrario, attiverà il flag per la prima traccia del tipo attuale."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:225
 #, no-c-format
