--- a/po/ru.po
+++ b/po/ru.po
@@ -11,7 +11,7 @@ msgstr ""
 "Report-Msgid-Bugs-To: Moritz Bunkus <moritz@bunkus.org>\n"
 "POT-Creation-Date: 2023-05-20 20:46+0200\n"
 "PO-Revision-Date: 2016-01-14 08:27+0000\n"
-"Last-Translator: Andrei Stepanov, 2018-2023\n"
+"Last-Translator: solokot <solokot@gmail.com>, 2019-2023\n"
 "Language-Team: Russian (http://app.transifex.com/moritz-bunkus/mkvtoolnix/language/ru/)\n"
 "Language: ru\n"
 "MIME-Version: 1.0\n"
@@ -1687,7 +1687,7 @@ msgstr "&Включено"
 #: src/mkvtoolnix-gui/forms/main_window/preferences_dialog.h:2231
 #, no-c-format
 msgid "&Ensure at least one track of each type has its \"track enabled\" flag set"
-msgstr ""
+msgstr "&Убедиться, что по крайней мере на одной дорожке каждого типа установлен её флаг \"дорожка включена\""
 
 #: src/mkvtoolnix-gui/forms/merge/command_line_dialog.h:119
 #, no-c-format
@@ -6733,7 +6733,7 @@ msgstr "Для каждой папки может быть создана нов
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:329
 #, no-c-format
 msgid "For each track type the GUI determines if at least one track has the flag turned on."
-msgstr ""
+msgstr "Для каждого типа дорожки графический интерфейс определяет, включён ли флаг хотя бы у одной дорожки."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:410
 #, no-c-format
@@ -7248,7 +7248,7 @@ msgstr "Если включено, такие файлы всегда будут
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:328
 #, no-c-format
 msgid "If enabled, the GUI checks the state of the 'track enabled' flag of all video, audio & subtitle tracks when starting to multiplex or adding a job to the job queue."
-msgstr ""
+msgstr "Если флаг включён, графический интерфейс проверяет состояние флага \"дорожка включена\" для всех дорожек видео, аудио и субтитров при запуске паковки или добавлении задания в очередь заданий."
 
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:417
 #, no-c-format
@@ -7362,7 +7362,7 @@ msgstr "Если вывод не является видеодорожкой, р
 #: src/mkvtoolnix-gui/main_window/preferences_dialog.cpp:330
 #, no-c-format
 msgid "If not, it will turn on the flag for the first track of the current type."
-msgstr ""
+msgstr "Если нет, то включается флаг для первой дорожки текущего типа."
 
 #: src/mkvtoolnix-gui/merge/output.cpp:225
 #, no-c-format
