--- a/doc/man/po4a/po/ca.po
+++ b/doc/man/po4a/po/ca.po
@@ -38,10 +38,8 @@ msgstr "76.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2023-03-26"
 msgid "2023-04-30"
-msgstr "26/06/2023"
+msgstr "30/04/2023"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1909,7 +1907,7 @@ msgstr "Aquesta opció canvia l'ordre en el qual es creen les pistes a partir d'
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:429
 msgid "If this option isn't given, tracks will be sorted by their type first &amp; the order of their source file second. Video tracks come first followed by audio &amp; subtitle tracks. Other rarely used track types come last."
-msgstr ""
+msgstr "Si no es proporciona aquesta opció, les pistes s'ordenaran primer pel tipus i després per l'ordre del seu fitxer font. Les pistes de vídeo van primer, seguides de les d'àudio i de les pistes de subtítols. Els altres tipus de pistes que s'utilitzen poc sovint van en darrer lloc."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:436
