man page translations: update Spanish

--- a/doc/man/po4a/po/es.po
+++ b/doc/man/po4a/po/es.po
@@ -37,10 +37,8 @@ msgstr "76.0"
 #: doc/man/mkvmerge.xml:7
 #: doc/man/mkvpropedit.xml:7
 #: doc/man/mkvtoolnix-gui.xml:7
-#, fuzzy
-#| msgid "2023-03-26"
 msgid "2023-04-30"
-msgstr "2023-03-26"
+msgstr "2023-04-30"
 
 #. type: Content of the mkvmerge entity
 #: doc/man/mkvextract.xml:9
@@ -1914,7 +1912,7 @@ msgstr "Esta opción cambia el orden en el que se crean las pistas de un archivo
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><listitem><para>
 #: doc/man/mkvmerge.xml:429
 msgid "If this option isn't given, tracks will be sorted by their type first &amp; the order of their source file second. Video tracks come first followed by audio &amp; subtitle tracks. Other rarely used track types come last."
-msgstr ""
+msgstr "Si no se especifica esta opción, en primer lugar, las pistas se ordenarán en por su tipo &amp; y en segundo lugar, por el orden de su archivo de origen. Las pistas de vídeo aparecen en primer lugar, seguidas de las pistas de audio y subtítulos. Otros tipos de pistas poco utilizados aparecen en último lugar."
 
 #. type: Content of: <refentry><refsect1><refsect2><variablelist><varlistentry><term>
 #: doc/man/mkvmerge.xml:436
